--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-
+    window.addEventListener('keydown', function (e) {
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+        const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+        if(!audio) return; // Stops the function from running altogether if there is no associated key.
+        audio.currentTime = 0; // Rewinds the audio to the start.
+        audio.play();
+    });
 </script>
 
 
